# mtg-psql-management

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  illustrations.py  main.py  poc.py  pyproject.toml
.github/workflows/: cron.yml  images.yml  migration.yml
alembic/: env.py
alembic/versions/: 6c6c92fc7e9b_adding_gin_indexes.py
db/: index.py  insert.py  insert_tokens.py  materialized_view.py  post_bulk_inserts.py  queries.py  truncate.py
models/: artists.py  base.py  card_info.py  cards.py  combos.py  illustrations.py  images.py  legalities.py  post_inserts.py  related_cards.py  related_tokens.py  rules.py  sets.py  tokens.py
sql/: create_tables.sql  poc_scripts.sql
src/: main.py
src/alembic/: env.py
src/db/: delete.py  initialiser.py  insert.py  materialized_view.py  post_bulk_inserts.py
src/db/queries/: __init__.py  artist.py  card.py  combo.py  illustration.py  image.py  legality.py  price.py  related_token.py  rule.py  sets.py
src/db/queries/materialised_views/: artists.py  distinct_card.py  sets.py
src/db/queries/tables/: drop_all.py  image.py
src/models/: artists.py  card_info.py  cards.py  combos.py  illustrations.py  images.py  legalities.py  price.py  related_tokens.py  rules.py  sets.py
src/tools/: drop_all.py  fetch_images.py
src/utils/: art_ids.py  combo_updates.py  data.py  dual_faced.py  images.py  maths.py  parse.py  single_faced.py
utils/: art_ids.py  card_cache.py  combo_updates.py  data.py  dual_faced.py  images.py  normalise.py  parse.py  single_faced.py
