[project]
name = "rustcord-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
]
