[project]
name = "rustcord-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.12",
    "asyncpg>=0.30.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "tqdm>=4.67.1",
    "unidecode>=1.3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9.6",
    "ty>=0.0.1a7",
    "coverage (>=7.8.0,<8.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pre-commit (>=4.2,<5.0)",
    "pytest-asyncio (>=0.26.0,<1)",
]


[tool.ruff]
line-length = 120
target-version = "py313"
include = ["src/**/*.py"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint]
ignore = ["B904", "COM812"]
select = [
    "E",
    "F",
    "I",
    "A",
    "B",
    "ANN",
    "FAST",
    "ASYNC",
    "ARG",
    "S",
    "BLE",
    "COM",
    "C4",
    "T20",
    "Q",
    "RET",
    "SIM",
    "TC",
    "PTH",
    "N",
    "PERF",
    "W",
    "RUF"
]
